tests/rosetta/out/Rust/call-a-function-2.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn f() -> Vec<i32> {
        return vec![0, 0.0];
    }
    fn g(a: i32, b: f64) -> i32 {
        return 0;
    }
    fn h(s: &'static str, nums: Vec<i32>) -> () {
    }
    fn main() -> () {
        f();
        g(1, 2.0);
        let res = f();
        g(res[0], res[1]);
        g(g(1, 2.0), 3.0);
    }
    main();
}
